[gd_scene load_steps=6 format=3 uid="uid://qwn5500363f6"]

[ext_resource type="Texture2D" uid="uid://cgd7gusrkam4e" path="res://Assets/Cards/cardback.png" id="1_auwtk"]
[ext_resource type="Script" path="res://Scenes/card.gd" id="1_b5413"]
[ext_resource type="Texture2D" uid="uid://de6bjaayiwv7d" path="res://Assets/outline.png" id="3_avb2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wohtn"]
size = Vector2(1000, 1410)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8hxa"]
size = Vector2(1, 1)

[node name="Card" type="Area2D" groups=["card"]]
scale = Vector2(0.2, 0.2)
collision_layer = 2
script = ExtResource("1_b5413")

[node name="CardArea" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wohtn")

[node name="DragArea" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e8hxa")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_auwtk")

[node name="Outline" type="Sprite2D" parent="."]
texture = ExtResource("3_avb2c")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
